--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite App</title>
-  <!-- Placez ici les chargements de polices et autres... -->
+
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Acme&family=Inter:wght@300;700&family=Oswald:wght@400;600&family=Roboto:wght@300&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Acme&family=Inter:wght@300;700&family=Oswald:wght@400;600&family=Roboto:wght@300&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Acme&family=Inter&family=Oswald:wght@400;600&family=Roboto:wght@300&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Acme&family=Inter&family=Oswald:wght@400;600&family=Roboto:wght@300&display=swap');
+  </style>
+
+
 </head>
 
 <body class="bg-fondsite text-white">
