--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+
+
   <title>Vite App</title>
-
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Acme&family=Inter:wght@300;700&family=Oswald:wght@400;600&family=Roboto:wght@300&display=swap');
-    @import url('https://fonts.googleapis.com/css2?family=Acme&family=Inter:wght@300;700&family=Oswald:wght@400;600&family=Roboto:wght@300&display=swap');
-    @import url('https://fonts.googleapis.com/css2?family=Acme&family=Inter&family=Oswald:wght@400;600&family=Roboto:wght@300&display=swap');
-    @import url('https://fonts.googleapis.com/css2?family=Acme&family=Inter&family=Oswald:wght@400;600&family=Roboto:wght@300&display=swap');
-  </style>
-
-
 </head>
 
 <body class="bg-fondsite text-white">
